unpackaged/main/default/objects/Contract__c/fields/Quote_Num__c.field-meta.xml
<CustomField>
    <fullName>Quote_Num__c</fullName>
    <label>Quote Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>