unpackaged/main/default/objects/Contract__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Number</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>