unpackaged/main/default/objects/Contract__c/fields/Total_Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Vehicles__c</fullName>
    <label>Total Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>